dev-ui: support for HTLC creation

--- a/clients/dev-ui/style.css
+++ b/clients/dev-ui/style.css
@@ -220,7 +220,8 @@ hash {
 
 .input-group label > strong {
     display: inline-block;
-    width: 75px;
+    width: 80px;
+    padding-right: 8px;
 }
 
 .input-group-button {
